tests/should-fail/shadowing/shadowing-3.j
function foo takes integer i returns nothing
    local integer i
endfunction
